# LearningOpenGL

./: .clang-format  CMakeLists.txt  main.cpp
include/: Shader.hpp
resources/shadersSources/: fragmentShader.glsl
src/: Shader.cpp
